<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".character.CharacterBottomSheetFragment">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actor"
                android:textColor="@color/black"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/actorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"/>
        </LinearLayout>

        <!-- Age -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive"
                android:textColor="@color/black"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/aliveTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateofbirth"
                android:textColor="@color/black"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/dateOfBirthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"/>
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="gender:"
                android:textColor="@color/black"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>